# profile-intake-platform

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  test-api.sh
.github/workflows/: ci.yml
client/: README.md  pyproject.toml
client/intake_client/: cli.py  client.py
client/tests/: test_client.py
docs/: api.md  architecture.md
server/: Dockerfile  README.md  pyproject.toml
server/app/: auth.py  config.py  database.py  main.py  models.py  processing.py  routes.py  schemas.py
server/tests/: conftest.py  test_auth.py  test_health.py  test_pdf_rejection.py  test_submission_flow.py
